--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "d3": "^5.12.0",
     "d3-brush": "^1.1.3",
-    "vue": "^2.6.10"
+    "jquery": "^3.4.1",
+    "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.1.3",
+    "vue-select": "^3.2.0",
+    "vuetify": "^2.1.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
