--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "d3": "^5.12.0",
     "d3-brush": "^1.1.3",
+    "geotiff": "^1.0.0-beta.6",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
